ecmascript/parser/tests/typescript-errors/tsc/statements/continueStatements/invalidSwitchContinueStatement/input.ts.stderr
error[1115]: A 'continue' statement can only jump to a label of an enclosing iteration statement
 --> $DIR/tests/typescript-errors/tsc/statements/continueStatements/invalidSwitchContinueStatement/input.ts:5:9
  |
5 |         continue;
  |         ^^^^^^^^^

